start writing database models and code

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -10,7 +10,7 @@
     <p>
     {{ form.username.label }}<br>
     <!-- Can also add CSS classes and IDs in the way size is added -->
-    {{ form.username(size=32) }}
+    {{ form.username(size=32) }}<br>
     <!-- Let's add some errors. Validators have errors -->
     {% for error in form.username.errors %}
     <span style="color: red;">[{{ error }}]</span>
@@ -18,7 +18,7 @@
     </p>
     <p>
     {{ form.password.label }}<br>
-    {{ form.password(size=32) }}
+    {{ form.password(size=32) }}<br>
     {% for error in form.password.errors %}
     <span style="color: red;">[{{ error }}]</span>
     {% endfor %}
