--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,6 +5,7 @@
 <h1>Sign In</h1>
 <!-- The login view function will send the form class to this -->
 <!-- novalidate option leaves validation for flask rather than browser-->
+<p>New Users: <a href="{{ url_for('register') }}">Register</a></p>
 <form action="" method="post" novalidate>
     {{ form.hidden_tag() }}
     <p>
