--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block app_content %}
     <h1>Unexpected Error</h1>
     <p>Tech team notified and are working on fixing the issue. Thank you for your patience</p>
     <p><a href="{{ url_for('index') }}">Back Home</a></p>
