--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,27 +1,61 @@
 {% extends "base.html" %}
 
 <!-- This block will be inserted into the base html page (note: block identifier is 'content')-->
-{% block content %}
+{% block head %}
+{{super()}}
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script type="text/javascript">
+    setInterval(function() {
+        $.ajax({
+            type: "GET",
+            url: "/data"
+        })
+            .done(function( data ) {
+                var dataObject = JSON.parse(data);
+                var tableHtml = '';
+                // Get all rows from returned json and turn to html
+                for (var i in dataObject) {
+                    var row = dataObject[i];
+
+                    var rowText = "<tr><td>" + row.turnstile_id + "</td><td>" + row.group_id + "</td><td>" + row.turn_count + "</td><td>" + row.turn_rate + "</td></tr>";
+                    tableHtml += rowText;
+                }
+                $("#main_table").html(tableHtml);
+                // in case fail
+            }).fail(function(jqXHR, textStatus, errorThrown) {
+                console.log(jqXHR, textStatus, errorThrown);
+            });
+        // Now set how often
+    }, 1000 * 5);
+</script>
+{% endblock %}
+{% block app_content %}
     <h1>User: {{ current_user.username }}</h1>
     <!-- Let's display the turnstiles that we're monitoring 
     Let's use the looping directive that jinja gives us-->
-    <table class="turnstiles">
-        <th>
+    <div class="container">
+        <table class="table table-hover table-bordered" style="text-align:center;" >
+            <caption>Turnstile Monitoring</caption>
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Group Id</th>
+                    <th>Turn Count</th>
+                    <th>Turn Rate</th>
+                </tr>
+            </thead>
+            <tbody id="main_table">
+            {% for turnstile in turnstiles %}
+            <!-- can have class="danger" to turn red using bootstrap -->
             <tr>
-                <td>Id</td>
-                <td>Group Id</td>
-                <td>Turn Count</td>
-                <td>Turn Rate</td>
+                <td>{{ turnstile.turnstile_id }}</td>
+                <td>{{ turnstile.group_id}}</td>
+                <td>{{ turnstile.turn_count }}</td>
+                <td class="watch_metric">{{ turnstile.turn_rate }}</td>
             </tr>
-        </th>
-        {% for turnstile in turnstiles %}
-        <tr>
-            <td>{{ turnstile.turnstile_id }}</td>
-            <td>{{ turnstile.group_id}}</td>
-            <td>{{ turnstile.turn_count }}</td>
-            <td>{{ turnstile.turn_rate }}</td>
-        </tr>
-        {% endfor %}
-    </table>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
     <!-- Need to add a request for service form/button here -->
 {% endblock %}
