--- a/app/templates/errors/500.html
+++ b/app/templates/errors/500.html
@@ -3,5 +3,5 @@
 {% block app_content %}
     <h1>Unexpected Error</h1>
     <p>Tech team notified and are working on fixing the issue. Thank you for your patience</p>
-    <p><a href="{{ url_for('index') }}">Back Home</a></p>
+    <p><a href="{{ url_for('main.index') }}">Back Home</a></p>
 {% endblock %}
